# capstone-llm-agents

./: .cache.sqlite  .gitignore  Procfile  README.md  TASK_AUTOMATION_ENHANCEMENTS.md  capstone-mockups.excalidraw  example.txt  export_test.ics  gitignore.txt  init_config.py  mac_requirements.txt  main.py  my_callender.ics  my_callender_reformatted.ics  pyproject.toml  requirements.txt  resources.md  test.py  test.txt  test_callender_agent.py  test_callender_server.py  weather_test.py  yaml_test.py
Assistant/: chroma.sqlite3
components/: __init__.py
components/actions/: __init__.py  assess_input.py  (+37 more)
config/: app.yaml  models.yaml  storage.yaml  vector.yaml
data/: config.yaml
llm_mas/: __init__.py
mcp_server/: __init__.py  calendar_functions.py  calendar_server.py  example_server.py  pdf_server.py  server_llm_config.py  test_server.py  weather_functions.py  weather_server.py
network_server/: IMPLEMENTATION.md  QUICKSTART.md  README.md  __init__.py  client.py  example_agent_communication.py  example_client.py  local_server.py  message.py  message_router.py  network.py  network_client.py  network_fragment.py  run_network.py  simple_example.py  websocket_client.py
scripts/: __init__.py  calendar_functions.py  calendar_server.py  example_task_automation.py  my_callender.ics  my_callender_reformatted.ics  server_llm_config.py  tcal.py  temp_test_mcp_weather_functions.py  temp_test_network.py  test_actions.py  test_agent_task_management.py  test_app_client.py  test_callender_agent.py  test_callender_functions.py  test_callender_server.py  test_client.py  test_mcp_client_wrapper.py  test_mcp_pdf_client.py  test_mcp_weather_client.py  test_mcp_weather_functions.py  test_mcp_weather_server.py  test_pdf_server  test_task_automation.py
src/: app.py  main.py  memory_test.py
tests/: TESTS.md  test_account.py  test_chat_history.py  test_client.py  test_config.py  test_context.py  test_embeddings.py  test_env.py  test_learning.py  test_math.py  test_mcp.py  test_memory.py  test_network.py  test_providers.py  test_reflection.py
(+270 files in other folders)
