[project]
name = "capstone-llm-agents"
version = "0.1.0"
description = "MAS that uses LLM agents to solve complex tasks."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "icalendar>=6.3.1",
    "ics>=0.7.2",
    "mcp[cli]>=1.12.4",
    "ollama>=0.5.3",
    "openai>=1.100.1",
    "requests>=2.32.5",
    "textual>=5.3.0",
    "textual-dev>=1.7.0",
    "tzlocal>=5.3.1",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["FIX002", "TD002"]

[tool.ruff]
line-length = 120
